--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/upload
 # compiled output
 /dist
 /node_modules
@@ -33,3 +34,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
